feature consultar produto

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
 </head>
 <body>
     <label for="product">Produto</label>
-    <input type="text" name="product" value="Cod/nome">
-    <button>Consultar</button>
+    <input type="text" name="product" id="product" value="Cod/nome">
+    <button id="search">Consultar</button>
     <button>Comprar</button>
+
+    <p id="preco-produto"></p>
+
+    <script src="main.js"></script>
 </body>
 </html>
