feature inserir produto no carrinho

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <label for="product">Produto</label>
     <input type="text" name="product" id="product" value="Cod/nome">
     <button id="search">Consultar</button>
-    <button>Comprar</button>
+    <button id="comprar">Comprar</button>
 
     <p id="preco-produto"></p>
 
