feature valor total do carrinho

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <input type="text" name="product" id="product" value="Cod/nome">
     <button id="search">Consultar</button>
     <button id="comprar">Comprar</button>
+    <button id="carrinho">Carrinho</button>
 
     <p id="preco-produto"></p>
-
+    <p id="preco-carrinho"></p>
     <script src="main.js"></script>
 </body>
 </html>
