--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <p id="preco-produto"></p>
     <p id="preco-carrinho"></p>
+    <p id="total-produtos"></p>
     <script src="main.js"></script>
 </body>
 </html>
